Electrical & Mechanical Equipment Store

--- a/WebContent/SellerHome.html
+++ b/WebContent/SellerHome.html
@@ -49,13 +49,13 @@
 							class="nav-link" href="storebooks" id="home">Home</a></span></li>
 					<li class="nav-item "><span><a class="nav-link"
 							href="storebooks" id="storebooks">Store
-								Books</a></span></li>
+								Products</a></span></li>
 					<li class="nav-item "><span><a class="nav-link"
 							href="addbook" id="addbook">Add
-								Books</a></span></li>
+								Product</a></span></li>
 					<li class="nav-item "><span><a class="nav-link"
 							href="removebook" id="removebook">Remove
-								Books</a></span></li>
+								Product</a></span></li>
 					<li class="nav-item "><span><a class="nav-link"
 							href="about" id="about">About Us</a></span></li>
 					<li class="nav-item "><span><a class="nav-link"
