--- a/WebContent/SellerLogin.html
+++ b/WebContent/SellerLogin.html
@@ -42,7 +42,7 @@
 		<nav class="navbar navbar-expand-sm bg-dark">
 				<a class="navbar-brand">
 					<!-- The below line can be an image or a h1, either will work -->
-					<img src="logo.png" alt="Google logo" width="60" height="30px">
+					<img src="book.png" alt="Google logo" width="60" height="30px">
 				</a>
 				
 				<button style="background-color:white;" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -60,7 +60,7 @@
 	</header>
 
 	<div id="topmid">
-		<h1>Welcome to Online Book Store</h1>
+		<h1>Welcome to Online Store</h1>
 	</div>
 
 	<form action="adminlog" method="post">
