--- a/WebContent/payment.html
+++ b/WebContent/payment.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Book Store</title>
+<title>Store</title>
 <link rel="apple-touch-icon" sizes="180x180"
 	href="./favicons/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32"
@@ -115,7 +115,7 @@ span.price {
 	<header>
 		<nav class="navbar navbar-expand-sm bg-dark">
 			<a class="navbar-brand"> <!-- The below line can be an image or a h1, either will work -->
-				<img src="logo.png" alt="Google logo" width="60" height="30px">
+				<img src="product.jpeg" alt="Google logo" width="60" height="30px">
 			</a>
 
 			<button style="background-color: white;" class="navbar-toggler"
@@ -130,7 +130,7 @@ span.price {
 					<li class="nav-item"><span><a class="nav-link active"
 							href="viewbook">Home</a></span></li>
 					<li class="nav-item "><span><a class="nav-link"
-							href="viewbook">Available Books</a></span></li>
+							href="viewbook">Available Product</a></span></li>
 					<li class="nav-item "><span><a class="nav-link"
 							href="about.html">About Us</a></span></li>
 					<li class="nav-item "><span><a
