--- a/WebContent/CustomerHome.html
+++ b/WebContent/CustomerHome.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Book Store</title>
+<title>Store</title>
 <link rel="apple-touch-icon" sizes="180x180"
 	href="./favicons/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32"
@@ -32,7 +32,7 @@
 		<nav class="navbar navbar-expand-sm bg-dark"
 			style="margin-bottom: 0px">
 			<a class="navbar-brand"> <!-- The below line can be an image or a h1, either will work -->
-				<img src="logo.png" alt="Google logo" width="60" height="30px">
+				<img src="product.jpeg" alt="Google logo" width="60" height="30px">
 			</a>
 
 			<button style="background-color: white;" class="navbar-toggler"
@@ -49,7 +49,7 @@
 							class="nav-link" href="viewbook" id="home">Home</a></span></li>
 					<li class="nav-item "><span><a class="nav-link"
 							href="viewbook" id="books">Available
-								Books</a></span></li>
+								Product</a></span></li>
 					<li class="nav-item "><span><a
 							class="nav-link glyphicon  glyphicon-shopping-cart " href="cart"
 							id="cart"> Cart</a></span></li>
