--- a/WebContent/CustomerLogin.html
+++ b/WebContent/CustomerLogin.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Book Store</title>
+<title>Store</title>
 <link rel="apple-touch-icon" sizes="180x180"
 	href="./favicons/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32"
@@ -71,7 +71,7 @@ input {
 	<header>
 		<nav class="navbar navbar-expand-sm bg-dark">
 			<a class="navbar-brand"> <!-- The below line can be an image or a h1, either will work -->
-				<img src="logo.png" alt="Google logo" width="60" height="30px">
+				<img src="product.jpeg" alt="Google logo" width="60" height="30px">
 			</a>
 
 			<button style="background-color: white;" class="navbar-toggler"
@@ -95,7 +95,7 @@ input {
 	</header>
 
 	<div id="topmid">
-		<h1>Welcome to Online Book Store</h1>
+		<h1>Welcome to Online Store</h1>
 	</div>
 
 	<form action="userlog" method="post" onsubmit="checkform()"
