--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Book Store</title>
+<title>Store</title>
 <link rel="apple-touch-icon" sizes="180x180"
 	href="./favicons/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32"
@@ -18,7 +18,7 @@
 		<nav class="navbar navbar-expand-sm bg-dark">
 				<a class="navbar-brand">
 					<!-- The below line can be an image or a h1, either will work -->
-					<img src="logo.png" alt="Google logo" width="60" height="30px">
+					<img src="product.jpeg" alt="Google logo" width="60" height="30px">
 				</a>
 				
 				<button style="background-color:white;" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -35,11 +35,13 @@
 			</nav>
 	</header>
 	<br>
-	<div id="topmid"><h1>Welcome to Online <br>Book Store</h1></div>
+	<div id="topmid">
+		<h1>Welcome to Online <br>Store</h1>
+	</div>
 	<br>
 	<table class="tab">
 		<tr>
-			<td><a href="index.html" id="happy">Happy Learning!!<br>Welcome to our book store!</a></td>
+			<td><a href="index.html" id="happy">Happy Shopping!!<br>Welcome to our store!</a></td>
 		</tr>
 	</table>
 
