--- a/WebContent/login.html
+++ b/WebContent/login.html
@@ -18,7 +18,7 @@
 		<nav class="navbar navbar-expand-sm bg-dark">
 				<a class="navbar-brand">
 					<!-- The below line can be an image or a h1, either will work -->
-					<img src="logo.png" alt="Google logo" width="60" height="30px">
+					<img src="product.jpeg" alt="Google logo" width="60" height="30px">
 				</a>
 				
 				<button style="background-color:white;" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,7 +34,7 @@
 				</div>
 			</nav>
 	</header>
-	<div id="topmid"><h1>Welcome to Online Book Store</h1></div>
+	<div id="topmid"><h1>Welcome to Online Store</h1></div>
 	<br>
 	<table class="tab">
 		<tr style="background-color: white; color: green; border-radius: 25%">
